tests/ui/lifetimes/re-empty-in-error.stderr
error: higher-ranked lifetime error
  --> $DIR/re-empty-in-error.rs:7:5
   |
LL |     foo(&10);
   |     ^^^^^^^^
   |
   = note: could not prove `for<'b> &'b (): 'a`

error: aborting due to previous error

